tests/bench/mvcgen/loom/Loom/Test/Strategies/IntroPre.lean
import Loom.Tactic.VCGen

/-!
Tests that `lmvcgen` introduces plain proposition and `ofProp` preconditions.
-/

open Loom Lean Meta Order Std.Internal.Do

set_option new_wp_monad true
set_option mvcgen.warning false

namespace Loom.Test.Strategies.IntroPre

macro "test" : tactic => `(tactic| lmvcgen (names := [s‚āĀ, s‚āā]) -trivial)
macro "testt" : tactic => `(tactic| lmvcgen (names := [s‚āĀ, s‚āā]))

/--
error: unsolved goals
case vc1
P : Prop
a‚úĚ : P
‚äĘ P
-/
#guard_msgs in
example (P : Prop) : P ‚äĎ P := by
  test

/--
error: unsolved goals
case vc1
P : Prop
a‚úĚ : P
‚äĘ P
-/
#guard_msgs in
example (P : Prop) : (‚ĆúP‚ĆĚ : Prop) ‚äĎ P := by
  test

/--
error: unsolved goals
case vc1
P Q : Prop
a‚úĚ : P ‚äď Q
‚äĘ P
-/
#guard_msgs in
example (P Q : Prop) : P ‚äď Q ‚äĎ P := by
  testt

/--
error: unsolved goals
case vc1
P : Nat ‚Üí Bool ‚Üí Prop
s‚āĀ‚úĚ : Nat
s‚āā‚úĚ : Bool
a‚úĚ : P s‚āĀ‚úĚ s‚āā‚úĚ
‚äĘ P s‚āĀ‚úĚ s‚āā‚úĚ
-/
#guard_msgs in
example (P : Nat ‚Üí Bool ‚Üí Prop) : P ‚äĎ P := by
  test

/--
error: unsolved goals
case vc1
l : Type
inst : CompleteLattice l
P : Prop
a‚úĚ : P
s‚āĀ‚úĚ : Nat
s‚āā‚úĚ : Bool
‚äĘ P
-/
#guard_msgs in
example {l : Type} [CompleteLattice l] (P : Prop) :
    (‚ĆúP‚ĆĚ : Nat ‚Üí Bool ‚Üí l) ‚äĎ (‚ĆúP‚ĆĚ : Nat ‚Üí Bool ‚Üí l) := by
  test

end Loom.Test.Strategies.IntroPre
